Fix code text wrapping

--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -57,6 +57,7 @@ code {
 pre code {
   background: none;
   line-height: 1.42;
+  white-space: pre-wrap;
 }
 code:before,
 code:after,
